--- a/Airbnb-Zillow-data-project.ipynb
+++ b/Airbnb-Zillow-data-project.ipynb
@@ -413,7 +413,7 @@
     "    <li>Cap rates as defined as \"the ratio between the net operating income produced by an asset and the original capital cost or alternatively its current market value.\"</li>\n",
     "    <li>Vacancy rates</li>\n",
     "</ol>\n",
-    "Because this data only contains information about future vacancy, we could only very roughly estimate net operating income and vacancy rates. This information is still useful because zipcodes with lower future vacancy estimations indicate that there is considerable demand and consumers are willing to book their rentals in advance. We will use this information later to weight caprates based on future demand. The new caprates will allow us to rank zipcodes by demand."
+    "Because this data only contains information about future vacancy, we could only very roughly estimate net operating income and vacancy rates. There might be cancellations or last miThis information is still useful because zipcodes with lower future vacancy estimations indicate that there is considerable demand and consumers are willing to book their rentals in advance. We will use this information later to weight caprates based on future demand. The new caprates will allow us to rank the best zipcodes for investment. Until then, we will assume a 75% occupancy rate."
    ]
   },
   {
