--- a/Airbnb-Zillow-data-project.ipynb
+++ b/Airbnb-Zillow-data-project.ipynb
@@ -247,7 +247,9 @@
     "\n",
     "Regardless, I did create a few functions to demonstrate a derivation of simple random sampling imputation (SRSI) to deal with missing zipcode values in this data set. It uses the data to construct a dictionary object of neighbourhoods mapped to a list of zipcodes. Then, it uses random.choice as a simplistic imputation method to randomly assign a zipcode from that neighbourhood into the observations with missing values. In general, a method like this probably shouldn't be used unless you are confident that the neighbourhood column contains accurate information and the number of possible values is low (probability of a random choice being correct is higher). Otherwise, this method woud exacerbate inaccuracies in the data set and could impact the final results of the analysis. It does, however, make for an easy demonstration. Ultimately, I don't trust the data in the neighbourhood_cleansed column and did not use imputed zipcodes in the final analysis. \n",
     "\n",
-    "You can see this code in the file, clean_zipcodes.py."
+    "You can see this code in the file, clean_zipcodes.py.\n",
+    "\n",
+    "Later on, I use the median to impute operating income and property values for zipcodes which are in the Airbnb data set but not in the Zillow data set and vice versa. "
    ]
   },
   {
@@ -413,7 +415,7 @@
     "    <li>Cap rates as defined as \"the ratio between the net operating income produced by an asset and the original capital cost or alternatively its current market value.\"</li>\n",
     "    <li>Vacancy rates</li>\n",
     "</ol>\n",
-    "Because this data only contains information about future vacancy, we could only very roughly estimate net operating income and vacancy rates. There might be cancellations or last miThis information is still useful because zipcodes with lower future vacancy estimations indicate that there is considerable demand and consumers are willing to book their rentals in advance. We will use this information later to weight caprates based on future demand. The new caprates will allow us to rank the best zipcodes for investment. Until then, we will assume a 75% occupancy rate."
+    "Because this data only contains information about future vacancy, we could only very roughly estimate net operating income and vacancy rates. There might be cancellations or last minute reservations. This information is still useful because zipcodes with lower future vacancy estimations indicate that there is considerable demand and consumers are willing to book their rentals in advance. We will use this information later to weight caprates based on future demand. The new caprates will allow us to rank the best zipcodes for investment. Until then, we will assume a 75% occupancy rate."
    ]
   },
   {
