--- a/Airbnb-Zillow-data-project.ipynb
+++ b/Airbnb-Zillow-data-project.ipynb
@@ -708,7 +708,7 @@
     }
    ],
    "source": [
-    "#Calculate count of outliers based on a price of greater than 427.25 and the ratio of outliers to listings within a zipcode.\n",
+    "#Calculate count of outliers based on a price of greater than $351.50 and the ratio of outliers to listings within a zipcode.\n",
     "sql_query = '''\n",
     "\n",
     "WITH cte AS (\n",
@@ -4183,7 +4183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4197,9 +4197,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
